# sc2-editor-ai

./: README.md  config.py  config.yaml  index.html  main.py  pyproject.toml  ruff.toml
app/: containers.py  logging.py  main.py  middleware.py
app/api/routers/: auth.py  chat.py  conversations.py  health.py
app/core/: auth.py  security.py
app/models/: auth.py  chat.py  user.py
app/services/: chat_service.py
app/templates/: admin_login.html  index.html
app/utils/: conversations.py
database/: embedding_property.py  graph_database.py
examples/: async_streaming_example.py
experiment/: main_test.py  prompts_test.py
sc2editor/datas/editorstring/: editorcatalogstrings.txt  editorcategorystrings.txt  editorstrings.txt
sc2editor/datas/new_tutorials/01_Introduction/: 001_Editor_Introduction.md  002_Getting_to_the_Editor.md  003_Navigating_the_Interface.md  004_Maps.md  005_Creating_a_Map.md  007_Creating_Mods.md  008_Map_Properties.md  009_Player_Properties.md  010_Team_Placement.md  011_BattleNet_Info.md  012_Game_Variants.md  013_Standard_Dependencies.md  014_The_Importer.md  015_Finding_Help.md  016_Publishing.md
sc2editor/datas/new_tutorials/02_Terrain_Editor/: 018_Terrain_Editor_Introduction.md  019_Terrain_Editor_Interface.md  020_Terrain_Layer.md  021_Units_Layer.md  022_Doodads_Layer.md  023_Points_Layer.md  024_Regions_Layer.md  (+7 more)
sc2editor/llm/: __init__.py  sc2editor_ai.py  system_prompts.py
sc2editor/text_splitters/: __init__.py  markdown_splitter.py
templates/: admin_login.html
tests/: concurrent_request.py
utils/: __init__.py  utility.py
(+58 files in other folders)
